fix(content-switcher): align web components styles

--- a/packages/web-components/src/components/content-switcher/content-switcher.scss
+++ b/packages/web-components/src/components/content-switcher/content-switcher.scss
@@ -10,11 +10,9 @@ $css--plex: true !default;
 @use '@carbon/styles/scss/config' as *;
 @use '@carbon/styles/scss/spacing' as *;
 @use '@carbon/styles/scss/theme' as *;
-@use '@carbon/styles/scss/utilities' as *;
-@use '@carbon/styles/scss/utilities/convert' as convert;
+@use '@carbon/styles/scss/utilities/convert' as *;
 @use '@carbon/styles/scss/components/content-switcher/content-switcher' as *;
 @use '@carbon/styles/scss/layout' as *;
-@use '@carbon/styles/scss/type' as *;
 
 // https://github.com/carbon-design-system/carbon/issues/11408
 @include content-switcher;
@@ -64,6 +62,10 @@ $css--plex: true !default;
       inset-inline-start: 0;
     }
 
+    &.#{$prefix}--content-switcher--selected {
+      border: 0;
+    }
+
     &.#{$prefix}--content-switcher--selected,
     &:focus,
     &:hover {
@@ -84,7 +86,7 @@ $css--plex: true !default;
 
   .#{$prefix}--content-switcher-btn {
     block-size: $spacing-08;
-    padding-inline: rem(11px);
+    padding-inline: rem(12px);
   }
 
   .#{$prefix}--content-switcher__label {
@@ -101,19 +103,28 @@ $css--plex: true !default;
 :host(#{$prefix}-content-switcher-item:first-of-type)
   .#{$prefix}--content-switcher-btn {
   border-end-start-radius: $spacing-02;
-  border-inline-start: rem(1px) solid $border-inverse;
   border-start-start-radius: $spacing-02;
+  box-shadow: inset rem(1px) 0 0 0 $border-inverse;
 
-  &::before {
-    content: none;
+  &:disabled {
+    box-shadow: none;
   }
 }
 
 :host(#{$prefix}-content-switcher-item:last-of-type)
   .#{$prefix}--content-switcher-btn {
   border-end-end-radius: $spacing-02;
-  border-inline-end: rem(1px) solid $border-inverse;
   border-start-end-radius: $spacing-02;
+  box-shadow: inset rem(-1px) 0 0 0 $border-inverse;
+
+  &:disabled {
+    box-shadow: none;
+  }
+}
+
+:host(#{$prefix}-content-switcher-item:first-of-type)
+  .#{$prefix}--content-switcher-btn::before {
+  background-color: transparent;
 }
 
 //LOW CONTRAST
@@ -123,20 +134,24 @@ $css--plex: true !default;
   // First item (only in low contrast)
   &:host(#{$prefix}-content-switcher-item:first-of-type)
     .#{$prefix}--content-switcher-btn:not([disabled]) {
-    border-end-start-radius: convert.to-rem(4px);
-    border-inline-start: convert.to-rem(1px) solid $border-strong;
-    border-start-start-radius: convert.to-rem(4px);
+    border-end-start-radius: rem(4px);
+    border-start-start-radius: rem(4px);
+    box-shadow: inset rem(1px) 0 0 0 $border-strong;
 
-    &::before {
-      background-color: transparent;
+    &:disabled {
+      box-shadow: none;
     }
   }
 
   // Last item (only in low contrast)
   &:host(#{$prefix}-content-switcher-item:last-of-type)
     .#{$prefix}--content-switcher-btn:not([disabled]) {
-    border-end-end-radius: convert.to-rem(4px);
-    border-inline-end: convert.to-rem(1px) solid $border-strong;
-    border-start-end-radius: convert.to-rem(4px);
+    border-end-end-radius: rem(4px);
+    border-start-end-radius: rem(4px);
+    box-shadow: inset rem(-1px) 0 0 0 $border-strong;
+
+    &:disabled {
+      box-shadow: none;
+    }
   }
 }
